# kent_2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  LICENSE  README.md  WEB_README.md  agent_config.json  agent_config.json.template  conversation_history.json  conversations.db  crontab  deploy.sh  dev.sh  fly.toml  langgraph_cache.db  langgraph_cache.db-shm  langgraph_cache.db-wal  pyproject.toml
.github/workflows/: fly.yml
backend/: conversations.db  langgraph_cache.db  langgraph_cache.db-shm  langgraph_cache.db-wal  main.py  requirements.txt
backend/conversation_archives/: session_session_1755822451243_g6qx4ivbt_609907.json  session_session_1755822672902_ej6b5ldvk_610385.json  session_session_1755823223494_sxgprsf94_610520.json  session_session_1755823367184_ht539zij9_610967.json  session_session_1755823774974_k4c41ncbp_611760.json  session_session_1755824558090_1s1il7e1e_611975.json  session_session_1755869267222_23jon2thy_639881.json  session_session_1755869568616_6vty9sb6b_640183.json  session_session_1755869872599_qz539gurr_640722.json  session_session_1755886315448_hyjgpgcjg_644993.json  session_session_1755886765673_kus38nasb_648068.json  session_session_1755907843607_ntrm4smtn_659068.json  (+17 more)
conversation_archives/: session_default_session_579565.json  session_default_session_580069.json  session_default_session_580244.json  session_default_session_580421.json  session_default_session_581279.json  session_default_session_606304.json  session_default_session_608944.json
frontend/: next.config.mjs  package-lock.json  package.json
(+39 files in other folders)
